<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/player_header">

        <SwitchPreferenceCompat

            app:icon="@drawable/ic_play_circle_outline_black_24dp"
            app:key="playWithVlc"
            app:summary="@string/vlc_summary"
            app:title="@string/vlc_setting" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_header">

        <Preference
            app:key="discord"
            app:title="@string/discord"
            app:summary="@string/discord_join"
            />

        <Preference
            app:key="github"
            app:title="@string/github"
            app:summary="@string/github_repo" />
        <Preference
            app:key="about"
            app:summary="Versión x"
            app:title="@string/developer_info" />

    </PreferenceCategory>
</PreferenceScreen>
