<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/sort_options"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_AZ"
                    android:title="@string/sort_AZ" />
                <item
                    android:id="@+id/sort_ZA"
                    android:title="@string/sort_ZA" />
                <item
                    android:id="@+id/sort_lastAdded"
                    android:title="@string/sort_last_added" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:title="@string/help"
        app:showAsAction="never" />

</menu>