<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.axiel7.tioanime.activity.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_directory"
        android:name="com.axiel7.tioanime.activity.ui.directory.DirectoryFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_directory"/>

    <fragment
        android:id="@+id/navigation_emission"
        android:name="com.axiel7.tioanime.activity.ui.emission.EmissionFragment"
        android:label="@string/title_emision"
        tools:layout="@layout/fragment_emission"/>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.axiel7.tioanime.activity.ui.favorites.FavoritesFragment"
        android:label="@string/title_fav"
        tools:layout="@layout/fragment_favorites" />
</navigation>
