<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:paddingBottom="8dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="90dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/sort_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableStart="@drawable/ic_sort_white_24dp"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/sort" />

    <TextView
        android:id="@+id/export_option"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableStart="@drawable/ic_export_white_24dp"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/export_fav" />

    <TextView
        android:id="@+id/import_option"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableStart="@drawable/ic_import_white_24dp"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/import_fav" />

    <TextView
        android:id="@+id/delete_all_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableStart="@drawable/ic_delete_sweep_white_24dp"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/delete_all" />

    <TextView
        android:id="@+id/help_option"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableStart="@drawable/ic_help_outline_white_24dp"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/help" />

</LinearLayout>