<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/filters_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@color/colorPrimary"
    android:paddingBottom="8dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="2dp"
        android:gravity="center"
        android:paddingStart="?attr/listPreferredItemPaddingStart"
        android:paddingEnd="?attr/listPreferredItemPaddingEnd">

        <ImageView
            android:id="@+id/pull_up_bar"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:alpha="0.5"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_drag_pill_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnBackground"
            android:contentDescription="@string/pull_up_bar" />

        <Button
            android:id="@+id/reset_button"
            style="@style/Theme.Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_filters"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/apply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/apply_filters"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="top">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/text_recent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:paddingStart="14dp"
                android:paddingTop="5dp"
                android:paddingEnd="14dp"
                android:text="@string/order_title"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/recent_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_recent"
                android:entries="@array/recent"
                android:padding="8dp"
                android:popupBackground="@color/colorPrimaryLight" />

            <TextView
                android:id="@+id/text_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recent_selection"
                android:alpha="0.7"
                android:paddingStart="14dp"
                android:paddingTop="5dp"
                android:paddingEnd="14dp"
                android:text="@string/status_title"
                android:textSize="14sp" />
            <Spinner
                android:id="@+id/status_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_status"
                android:entries="@array/status"
                android:padding="8dp"
                android:popupBackground="@color/colorPrimaryLight" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/start_year_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/status_selection"
                android:layout_margin="8dp"
                android:hint="@string/start_year"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/start_year_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="4" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/end_year_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/start_year_layout"
                android:layout_margin="8dp"
                android:hint="@string/end_year"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/end_year_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="4" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/genres_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/end_year_layout"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_white_24dp"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                android:lineSpacingExtra="1sp"
                android:paddingStart="14dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="14dp"
                android:text="@string/genres"
                android:textSize="16sp" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>