<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:paddingBottom="8dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="90dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:onClick="openMusic"
        android:drawableStart="@drawable/ic_music_note_white_24dp"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/anime_music" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:onClick="openWallpapers"
        android:drawableStart="@drawable/ic_image_black_24dp"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/wallpapers" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/dividerHorizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:onClick="openSettings"
        android:drawableStart="@drawable/ic_settings_black_24dp"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/settings" />

</LinearLayout>